# FontReader

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  notgsub.txt  rustfmt.toml  seguiemj-gsub.txt  todo.md
.github/workflows/: examples-build.yml
doc/: README.ja.md  README.md  SVFONTSPEC.md  api-recipes.ja.md  api-recipes.md  cff2-investigation.ja.md  cff2-investigation.md  feature-status.ja.md  feature-status.md  svg-fonts-spec.ja.md  svg-fonts-spec.md
examples/: api_overview.rs  fontcmaps.rs  fontcolor.rs  fontgkana.rs  fontgsub.rs  fontheader.rs  fontload.rs  fontloader.rs  fontmetadata.rs  fontname.rs  fontsbix.rs  fontsvg.rs  fonttest.rs  fonttype.rs  tategaki.rs
examples/common/: mod.rs
src/: cmap.rs  commads.rs  commands.rs  fontengine.rs  fontface.rs  fontfile.rs  fontfiles.rs  fontheader.rs  fontreader.rs  head.rs  hhea.rs  hmtx.rs  lib.rs  main.rs  maxp.rs  name.rs  svgparse.rs  test.rs  util.rs
src/opentype/: mod.rs  platforms.rs  ttc.rs  ttf.rs
src/opentype/color/: colr.rs  cpal.rs  mod.rs  sbix.rs  svg.rs
src/opentype/extentions/: gdef.rs  gpos.rs  gsub.rs  mod.rs
src/opentype/layouts/: classdef.rs  condition.rs  coverage.rs  device.rs  feature.rs  language.rs  lookup.rs  mod.rs  script.rs
src/opentype/outline/: cff.rs  glyf.rs  loca.rs  mod.rs
src/opentype/requires/: avar.rs  cmap.rs  delta_set.rs  fvar.rs  gvar.rs  head.rs  hhea.rs  hmtx.rs  hvar.rs  maxp.rs  mod.rs  mvar.rs  name.rs  os2.rs  post.rs  var_store.rs  vhea.rs  vmtx.rs  vvar.rs
src/outline/: cff.rs  glyf.rs  loca.rs  mod.rs
src/requires/: cmap.rs  head.rs  hhea.rs  hmtx.rs  maxp.rs  mod.rs  name.rs  os2.rs  post.rs
src/truetype/: mod.rs
src/woff/: mod.rs  woff.rs  woff2.rs
