[package]
name = "fontloader"
version = "0.0.1"
edition = "2021"
authors = ["Mith@mmk"]
description = "A font loader for Rust"
license = "MIT"
repository = "https://github.com/mith-mmk/FontReader"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = ["encoding", "layout", "cff"]
encoding = ["iconv"]
layout = []
cff = []

[dependencies]
# MUST
bin-rs = "0.0.9"
num-traits = "0.2"
num-derive = "0.4"
# for Woff
miniz_oxide = {version = "0.7.1"}
# for name table and PlatformID is 1 
iconv = {version = "0.1", optional = true}
base64 = "0.21.4"

